feat: auth (ES256 JWKS), job tracker, resizable table, account deletion, tests, scan fixes